# fre-cli

./: .buildinfo  .codecov.yml  .cspell.json  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CMORmixer.py  CNAME  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  FAQ.html  LICENSE.md  MANIFEST.in  Makefile  README.md  api.html  badges.html  cli_prototype.yml  code_style.md  codecov.yml  condaEnvironment.yml  container.html  contributing_to_doc.html  coverage.xml  coveragerc  cspell.json  cute_parsing_script.bash  environment.yml  for-developers.html  for-maintainers.html  fre.analysis.freanalysis.html  fre.analysis.html  fre.analysis.subtools.html  fre.analysis.tests.html  fre.analysis.tests.test_subtools.html  fre.app.freapp.html  fre.app.generate_time_averages.cdoTimeAverager.html  fre.app.generate_time_averages.frenctoolsTimeAverager.html  (+169 more)
.cspell/: conda-words.txt  noaa-words.txt  ok-unknown-words.txt
.doctrees/: FAQ.doctree  api.doctree  badges.doctree  container.doctree  contributing_to_doc.doctree  environment.pickle  for-developers.doctree  for-maintainers.doctree  fre.analysis.doctree  fre.analysis.freanalysis.doctree  fre.analysis.subtools.doctree  fre.analysis.tests.doctree  fre.analysis.tests.test_subtools.doctree  fre.app.doctree  fre.app.freapp.doctree  fre.app.generate_time_averages.cdoTimeAverager.doctree  fre.app.generate_time_averages.doctree  fre.app.generate_time_averages.frenctoolsTimeAverager.doctree  fre.app.generate_time_averages.frepytoolsTimeAverager.doctree  fre.app.generate_time_averages.generate_time_averages.doctree  fre.app.generate_time_averages.tests.doctree  fre.app.generate_time_averages.tests.test_generate_time_averages.doctree  fre.app.generate_time_averages.timeAverager.doctree  fre.app.mask_atmos_plevel.doctree  fre.app.regrid_xy.doctree  fre.app.regrid_xy.regrid_xy.doctree  fre.app.regrid_xy.tests.doctree  fre.app.regrid_xy.tests.test_fre_regrid_xy_functions.doctree  fre.app.regrid_xy.tests.test_regrid_xy.doctree  fre.app.regrid_xy.tests.write_gridfiles.doctree  fre.app.regrid_xy.tests.write_input_files.doctree  fre.catalog.doctree  fre.catalog.frecatalog.doctree  fre.catalog.tests.doctree  fre.catalog.tests.test_fre_catalog.doctree  fre.check.doctree  fre.check.frecheck.doctree  fre.check.frecheckexample.doctree  fre.cmor.cmor_finder.doctree  fre.cmor.cmor_helpers.doctree  (+108 more)
.github/: copilot-instructions.md  pull_request_template.md
_sources/: badges.rst.txt  for-developers.rst.txt  fre.analysis.freanalysis.rst.txt  fre.analysis.rst.txt  fre.analysis.subtools.rst.txt  fre.analysis.tests.rst.txt  fre.analysis.tests.test_subtools.rst.txt  fre.app.freapp.rst.txt  fre.app.generate_time_averages.cdoTimeAverager.rst.txt  fre.app.generate_time_averages.frenctoolsTimeAverager.rst.txt  fre.app.generate_time_averages.frepytoolsTimeAverager.rst.txt  fre.app.generate_time_averages.generate_time_averages.rst.txt  fre.app.generate_time_averages.rst.txt  fre.app.generate_time_averages.tests.rst.txt  fre.app.generate_time_averages.tests.test_generate_time_averages.rst.txt  fre.app.generate_time_averages.timeAverager.rst.txt  fre.app.mask_atmos_plevel.rst.txt  fre.app.regrid_xy.regrid_xy.rst.txt  fre.app.regrid_xy.rst.txt  fre.app.regrid_xy.tests.rst.txt  fre.app.regrid_xy.tests.test_fre_regrid_xy_functions.rst.txt  fre.app.regrid_xy.tests.test_regrid_xy.rst.txt  fre.app.regrid_xy.tests.write_gridfiles.rst.txt  fre.app.regrid_xy.tests.write_input_files.rst.txt  fre.app.rst.txt  fre.catalog.frecatalog.rst.txt  fre.catalog.rst.txt  fre.catalog.tests.rst.txt  fre.catalog.tests.test_fre_catalog.rst.txt  fre.check.frecheck.rst.txt  fre.check.frecheckexample.rst.txt  fre.check.rst.txt  fre.cmor.cmor_finder.rst.txt  fre.cmor.cmor_helpers.rst.txt  fre.cmor.cmor_mixer.rst.txt  fre.cmor.cmor_yamler.rst.txt  fre.cmor.frecmor.rst.txt  fre.cmor.rst.txt  fre.cmor.tests.rst.txt  fre.cmor.tests.test_cmor_find_subtool.rst.txt  (+102 more)
brainstorming/: foodtest.py  foodtest2.py  groupargex.py  ideas.md
container-files/: Dockerfile-fre-cli  Dockerfile-frecli  README.md  (+2 more)
(+964 files in other folders)
